Mobile Optimizations: Made css changes for mobile bugs and UX. Changed overflow-x settings, removed display-3 in <h1>'s, changed html font size to 14px, made form inputs larger.

--- a/NU_V2/static/css/app.css
+++ b/NU_V2/static/css/app.css
@@ -1,9 +1,10 @@
 html,
 body {
   font-family: 'Bangers', cursive;
-  font-size: 1em;
+  font-size: 14px;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -25,9 +26,9 @@ body {
       color: #ce2323 !important;
   }
 
-.navbar {
-  /*background-color: #000000;*/
-  font-size: 1em;
+.navbar,
+.form-control {
+  font-size: 1.3em;
   }
 
 #title {
@@ -89,9 +90,6 @@ th {
   font-size: 1em;
 }
 
-#user {
-  text-align: right;
-}
 
 #check {
   color: lime;
@@ -107,14 +105,4 @@ th {
 
 .badge {
   color: red;
-}
-
-.deny {
-  color: red;
-  font-size: 1.5em;
-}
-
-.success {
-  color: white;
-  font-size: 1.5em;
 }
